Muchanges related to account and logout added
